--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "rm -rf ./lib; NODE_ENV=production babel ./modules -d lib --ignore '__tests__'",
     "lint": "eslint ./modules",
     "test": "npm run lint && jest",
-    "prepublish": "npm run lint && npm run build",
-    "install": "npm run build"
+    "prepublish": "npm run lint && npm run build"
   },
   "keywords": [
     "redux",
